Updated the first part of pseudocode

--- a/sort.ipynb
+++ b/sort.ipynb
@@ -101,58 +101,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Pseudocode\n",
+    "# Pseudocode\n",
     "\n",
     "---\n",
     "\n",
-    "### Pseudocode for sorting students based on the factors\n",
     "\n",
-    "    IMPORT math, random, copy, datetime\n",
+    "# Student and Split_Student Classes\n",
     "\n",
-    "    DEFINE CLASS Student\n",
-    "        FUNCTION __init__(self, tutorial_group, id, school, name, gender, cgpa)\n",
-    "            INITIALIZE attributes: tutorial_group, id, school, name, gender, cgpa\n",
-    "        END FUNCTION\n",
-    "    END CLASS\n",
+    "## Initialize all_grouping\n",
+    "- Create an empty list to store all the student groups.\n",
     "\n",
-    "    DEFINE CLASS Split_Student\n",
-    "        FUNCTION __init__(self)\n",
-    "            pass\n",
+    "## Define Classes\n",
     "\n",
-    "        FUNCTION split_students_by_school(self, students, **kwargs)\n",
-    "            CREATE empty dictionary sorted_students\n",
-    "            FOR EACH student IN students\n",
-    "                ADD student to sorted_students[student.school] (create new list for every new school)\n",
-    "            RETURN sorted_students\n",
+    "### Student Class:\n",
+    "- **Attributes**: `tutorial_group`, `id`, `school`, `name`, `gender`, `cgpa`\n",
+    "- **Constructor (`__init__`)**: Initialize the above attributes when creating a Student instance.\n",
     "\n",
-    "        FUNCTION split_students_by_gender(self, students,**kwargs)\n",
-    "            CREATE dictionary sorted_students with keys \"Male\" and \"Female\" (empty lists)\n",
-    "            FOR EACH student IN students\n",
-    "                ADD student to correct gender list in sorted_students\n",
-    "            REMOVE any empty gender lists from sorted_students\n",
-    "            RETURN sorted_students\n",
+    "### Split_Student Class:\n",
     "\n",
-    "            **Remove any missing gender key for single-gender tutorial groups.**\n",
-    "            IF male list is empty\n",
-    "                REMOVE male list\n",
-    "            IF female list is empty\n",
-    "                REMOVE female list\n",
-    "            RETURN sorted_students\n",
+    "#### Constructor (`__init__`):\n",
+    "- No parameters other than `self`. (Empty constructor)\n",
     "\n",
-    "        FUNCTION split_students_by_cgpa(self, students, **kwargs):\n",
-    "        size = kwargs[\"size\"]\n",
-    "        percentile = 100 / size\n",
-    "        students.sort BY cgpa (ascending)\n",
-    "        sorted_students = {}\n",
-    "        band_number = 0\n",
-    "        cutoff = CEILING((percentile / 100) * LENGTH(students))\n",
+    "#### Method: `split_students_by_school`\n",
     "\n",
-    "        WHILE band_number < size:\n",
-    "            sorted_students[band_number] = students[:cutoff]\n",
-    "            REMOVE first cutoff students from students\n",
-    "            IF students IS EMPTY, BREAK\n",
-    "            INCREMENT band_number\n",
-    "        RETURN sorted_students\n",
+    "**Parameters**: `students`, `**kwargs`\n",
+    "\n",
+    "**Action**:\n",
+    "- Create an empty dictionary `sorted_students`.\n",
+    "- For each student in `students`, add the student to the corresponding school list in `sorted_students`.\n",
+    "- Return the `sorted_students` dictionary.\n",
+    "\n",
+    "#### Method: `split_students_by_gender`\n",
+    "\n",
+    "**Parameters**: `students`, `**kwargs`\n",
+    "\n",
+    "**Action**:\n",
+    "- Create a dictionary `sorted_students` with keys `\"Male\"` and `\"Female\"`, each containing an empty list.\n",
+    "- For each student in `students`, add the student to the correct gender list in `sorted_students`.\n",
+    "- Remove any empty gender lists.\n",
+    "  \n",
+    "**Check single-gender tutorial groups**:\n",
+    "- If the male list is empty, remove it.\n",
+    "- If the female list is empty, remove it.\n",
+    "  \n",
+    "- Return the `sorted_students` dictionary.\n",
+    "\n",
+    "#### Method: `split_students_by_cgpa`\n",
+    "\n",
+    "**Parameters**: `students`, `**kwargs`\n",
+    "\n",
+    "**Action**:\n",
+    "- Extract the `size` value from `kwargs`.\n",
+    "- Calculate `percentile` as `100 / size`.\n",
+    "- Sort the `students` by `cgpa` in ascending order.\n",
+    "- Create an empty dictionary `sorted_students` for CGPA bands.\n",
+    "- Initialize `band_number` as 0 and calculate the `cutoff` using `percentile` and the total number of students.\n",
+    "\n",
+    "**While loop**:\n",
+    "- Create a band for `band_number` by adding students up to the `cutoff` to `sorted_students`.\n",
+    "- Remove the first `cutoff` number of students from `students`.\n",
+    "- If there are no students left, break the loop.\n",
+    "- Increment `band_number`.\n",
+    "\n",
+    "- Return the `sorted_students` dictionary.\n",
+    "\n",
     "\n",
     "---"
    ]
@@ -365,7 +377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Main Code ##"
+    "# Main Code "
    ]
   },
   {
@@ -944,7 +956,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation of Results ##"
+    "# Evaluation of Results "
    ]
   },
   {
@@ -2240,7 +2252,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Challenges & Solution\n",
+    "# Challenges & Solution\n",
     "\n",
     "\n",
     "\n",
