updated some errors

--- a/sort.ipynb
+++ b/sort.ipynb
@@ -92,7 +92,7 @@
     "2. **High Female Ratios**:\n",
     "   - **TG103**: High girl ratio.\n",
     "   - **TG28**: High girl ratio.\n",
-    "3. **TG97**: Gender ratio of **34 boys: 16 girls**.\n",
+    "3. **TG97**: Gender ratio of **34 girls: 16 boys**.\n",
     "\n",
     "---"
    ]
