--- a/sort.ipynb
+++ b/sort.ipynb
@@ -115,70 +115,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pseudocode\n",
-    "\n",
-    "---\n",
-    "\n",
-    "\n",
-    "# Student and Split_Student Classes\n",
-    "\n",
-    "## Initialize all_grouping\n",
-    "- Create an empty list to store all the student groups.\n",
-    "\n",
     "## Define Classes\n",
     "\n",
     "### Student Class:\n",
-    "- **Attributes**: `tutorial_group`, `id`, `school`, `name`, `gender`, `cgpa`\n",
-    "- **Constructor (`__init__`)**: Initialize the above attributes when creating a Student instance.\n",
+    "- Attributes: tutorial_group, id, school, name, gender, cgpa\n",
+    "- Constructor (`__init__`): Initialize the above attributes when creating a Student instance.\n",
     "\n",
     "### Split_Student Class:\n",
     "\n",
-    "#### Constructor (`__init__`):\n",
-    "- No parameters other than `self`. (Empty constructor)\n",
+    "#### Constructor (__init__):\n",
+    "- No parameters other than self. (Empty constructor)\n",
     "\n",
-    "#### Method: `split_students_by_school`\n",
+    "#### Function: split_students_by_school\n",
     "\n",
-    "**Parameters**: `students`, `**kwargs`\n",
-    "\n",
-    "**Action**:\n",
-    "- Create an empty dictionary `sorted_students`.\n",
-    "- For each student in `students`, add the student to the corresponding school list in `sorted_students`.\n",
-    "- Return the `sorted_students` dictionary.\n",
-    "\n",
-    "#### Method: `split_students_by_gender`\n",
-    "\n",
-    "**Parameters**: `students`, `**kwargs`\n",
+    "Parameters: students, **kwargs\n",
     "\n",
     "**Action**:\n",
-    "- Create a dictionary `sorted_students` with keys `\"Male\"` and `\"Female\"`, each containing an empty list.\n",
-    "- For each student in `students`, add the student to the correct gender list in `sorted_students`.\n",
+    "- Create an empty dictionary sorted_students.\n",
+    "- For each student in students, add the student to the corresponding school list in sorted_students.\n",
+    "- Return the sorted_students dictionary.\n",
+    "\n",
+    "#### Function: split_students_by_gender\n",
+    "\n",
+    "Parameters: students, **kwargs\n",
+    "\n",
+    "**Action**:\n",
+    "- Create a dictionary sorted_students with keys \"Male\" and \"Female\", each containing an empty list.\n",
+    "- For each student in students, add the student to the correct gender list in sorted_students.\n",
     "- Remove any empty gender lists.\n",
     "  \n",
-    "**Check single-gender tutorial groups**:\n",
+    "Check single-gender tutorial groups:\n",
     "- If the male list is empty, remove it.\n",
     "- If the female list is empty, remove it.\n",
     "  \n",
-    "- Return the `sorted_students` dictionary.\n",
+    "- Return the sorted_students dictionary.\n",
     "\n",
-    "#### Method: `split_students_by_cgpa`\n",
+    "#### Function: split_students_by_cgpa\n",
     "\n",
-    "**Parameters**: `students`, `**kwargs`\n",
+    "Parameters: students, **kwargs\n",
     "\n",
     "**Action**:\n",
-    "- Extract the `size` value from `kwargs`.\n",
-    "- Calculate `percentile` as `100 / size`.\n",
-    "- Sort the `students` by `cgpa` in ascending order.\n",
-    "- Create an empty dictionary `sorted_students` for CGPA bands.\n",
-    "- Initialize `band_number` as 0 and calculate the `cutoff` using `percentile` and the total number of students.\n",
+    "- Extract the size value from kwargs.\n",
+    "- Calculate percentile as 100 / size.\n",
+    "- Sort the students by cgpa in ascending order.\n",
+    "- Create an empty dictionary sorted_students for CGPA bands.\n",
+    "- Initialize band_number as 0 and calculate the cutoff using percentile and the total number of students.\n",
     "\n",
-    "**While loop**:\n",
-    "- Create a band for `band_number` by adding students up to the `cutoff` to `sorted_students`.\n",
-    "- Remove the first `cutoff` number of students from `students`.\n",
+    "While loop:\n",
+    "- Create a band for band_number by adding students up to the cutoff to sorted_students.\n",
+    "- Remove the first cutoff number of students from students.\n",
     "- If there are no students left, break the loop.\n",
-    "- Increment `band_number`.\n",
+    "- Increment band_number\n",
     "\n",
-    "- Return the `sorted_students` dictionary.\n",
-    "\n",
+    "- Return the sorted_students dictionary.\n",
     "\n",
     "---"
    ]
